syntax = "proto3";
package gopkg.in.srcd.proteus.v1.example;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "gopkg.in/src-d/proteus.v1/example/categories/generated.proto";
import "google/protobuf/duration.proto";

option (gogoproto.protosizer_all) = true;
option (gogoproto.sizer_all) = false;
option go_package = "example";

message Category {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.goproto_stringer) = false;
	option (gogoproto.typedecl) = false;
	int64 id = 1 [(gogoproto.customname) = "ID"];
	google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp deleted_at = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	string name = 5;
	gopkg.in.srcd.proteus.v1.example.Type type = 6;
	string color = 7 [(gogoproto.casttype) = "Color"];
	gopkg.in.srcd.proteus.v1.example.categories.CategoryOptions options = 8 [(gogoproto.nullable) = false];
}

message MyDuration {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	google.protobuf.Duration duration = 1 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
	string name = 2;
}

message MyTime {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	google.protobuf.Timestamp time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	string name = 2;
}

message Price {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	string currency = 1;
	int64 amount = 2;
}

message Product {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	int64 id = 1 [(gogoproto.customname) = "ID"];
	google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp deleted_at = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	string name = 5;
	map<string, gopkg.in.srcd.proteus.v1.example.Price> price = 6 [(gogoproto.casttype) = "Prices", (gogoproto.nullable) = false];
	repeated string tags = 7;
	int64 category_id = 8 [(gogoproto.customname) = "CategoryID"];
	int32 primary_category_id = 9 [(gogoproto.casttype) = "int8", (gogoproto.customname) = "PrimaryCategoryID"];
}

message GetAlphaTimeRequest {
}

message GetDurationForLengthRequest {
	int64 arg1 = 1;
}

message GetDurationForLengthCtxRequest {
	int64 arg1 = 1;
}

message GetOmegaTimeRequest {
}

message GetPhoneRequest {
}

message RandomCategoryRequest {
}

message RandomNumberRequest {
	double arg1 = 1;
	double arg2 = 2;
}

message RandomNumberResponse {
	double result1 = 1;
}

// Type will be transformed into an enum.
enum Type {
	option (gogoproto.enumdecl) = false;
	option (gogoproto.goproto_enum_prefix) = false;
	option (gogoproto.goproto_enum_stringer) = false;
	PUBLIC = 0 [(gogoproto.enumvalue_customname) = "Public"];
	PRIVATE = 1 [(gogoproto.enumvalue_customname) = "Private"];
	CUSTOM = 2 [(gogoproto.enumvalue_customname) = "Custom"];
}

service ExampleService {
	rpc GetAlphaTime (gopkg.in.srcd.proteus.v1.example.GetAlphaTimeRequest) returns (gopkg.in.srcd.proteus.v1.example.MyTime);
	rpc GetDurationForLength (gopkg.in.srcd.proteus.v1.example.GetDurationForLengthRequest) returns (gopkg.in.srcd.proteus.v1.example.MyDuration);
	rpc GetDurationForLengthCtx (gopkg.in.srcd.proteus.v1.example.GetDurationForLengthCtxRequest) returns (gopkg.in.srcd.proteus.v1.example.MyDuration);
	rpc GetOmegaTime (gopkg.in.srcd.proteus.v1.example.GetOmegaTimeRequest) returns (gopkg.in.srcd.proteus.v1.example.MyTime);
	rpc GetPhone (gopkg.in.srcd.proteus.v1.example.GetPhoneRequest) returns (gopkg.in.srcd.proteus.v1.example.Product);
	rpc RandomCategory (gopkg.in.srcd.proteus.v1.example.RandomCategoryRequest) returns (gopkg.in.srcd.proteus.v1.example.categories.CategoryOptions);
	rpc RandomNumber (gopkg.in.srcd.proteus.v1.example.RandomNumberRequest) returns (gopkg.in.srcd.proteus.v1.example.RandomNumberResponse);
}

